--- a/VzHackersTextFreely/pom.xml
+++ b/VzHackersTextFreely/pom.xml
@@ -25,4 +25,11 @@
       </plugin>
     </plugins>
   </build>
+  <dependencies>
+  	<dependency>
+  		<groupId>com.sun.jersey</groupId>
+  		<artifactId>jersey-server</artifactId>
+  		<version>1.17</version>
+  	</dependency>
+  </dependencies>
 </project>
